# cunn_hip

./: CMakeLists.txt  README.md  runtests.sh  sumtests.sh  test.lua
benchmarks/Cifar10/: README.md
benchmarks/Cifar10/models/: nin.lua  vgg_bn_drop.lua
demos/galaxyzoo/: 2_model.lua  3_train.lua  4_test.lua  INSTALL.md  README.md  doall.lua
demos/train-a-digit-classifier/: dataset-mnist.lua  train-on-mnist-cpu.lua  train-on-mnist-gpu.lua
demos/train-face-detector/: data.lua  model.lua  run.lua  test.lua  train.lua
lib/THCUNN/: Abs.cu  AbsCriterion.cu  BCECriterion.cu  BatchNormalization.cu  CMakeLists.txt  ClassNLLCriterion.cu  DistKLDivCriterion.cu  ELU.cu  FeatureLPPooling.cu  HardTanh.cu  IndexLinear.cu  L1Cost.cu  LeakyReLU.cu  LogSigmoid.cu  LogSoftMax.cu  LookupTable.cu  LookupTableBag.cu  MSECriterion.cu  MarginCriterion.cu  MultiLabelMarginCriterion.cu  MultiMarginCriterion.cu  PReLU.cu  RReLU.cu  Sigmoid.cu  SmoothL1Criterion.cu  SoftMarginCriterion.cu  SoftMax.cu  SoftPlus.cu  SoftShrink.cu  SparseLinear.cu  SpatialAdaptiveMaxPooling.cu  SpatialAveragePooling.cu  SpatialClassNLLCriterion.cu  SpatialConvolutionMM.cu  SpatialCrossMapLRN.cu  SpatialDilatedConvolution.cu  SpatialDilatedMaxPooling.cu  SpatialFractionalMaxPooling.cu  SpatialMaxUnpooling.cu  SpatialReflectionPadding.cu  (+24 more)
lib/THCUNN/generic/: AbsCriterion.cu  BCECriterion.cu  BatchNormalization.cu  ClassNLLCriterion.cu  DistKLDivCriterion.cu  FusedRNNKernel.cu  GatedLinearUnit.cu  L1Cost.cu  LookupTable.cu  LookupTableBag.cu  MSECriterion.cu  MarginCriterion.cu  PReLU.cu  RReLU.cu  SmoothL1Criterion.cu  SoftMarginCriterion.cu  SparseLinear.cu  SpatialAdaptiveAveragePooling.cu  SpatialAdaptiveMaxPooling.cu  SpatialClassNLLCriterion.cu  SpatialCrossMapLRN.cu  SpatialDepthWiseConvolution.cu  SpatialFractionalMaxPooling.cu  SpatialMaxUnpooling.cu  SpatialSubSampling.cu  Threshold.cu  VolumetricAveragePooling.cu  VolumetricDilatedMaxPooling.cu  VolumetricFractionalMaxPooling.cu  VolumetricUpSamplingNearest.cu  VolumetricUpSamplingTrilinear.cu
rocks/: cunn-scm-1.rockspec
